2014-06-06  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power6x/fpu/Implies: New file.
	* sysdeps/powerpc/powerpc64/power6x/fpu/Implies: new file.
	* sysdeps/powerpc/powerpc64/power6x/multiarch/Implies: New file.
	* sysdeps/powerpc/powerpc64/power5+/fpu/Implies: Remove multiarch
	imply folder.
	* sysdeps/powerpc/powerpc64/power5/fpu/Implies: Likewise.
	* sysdeps/powerpc/powerpc64/power7/fpu/Implies: Likewise.
	* sysdeps/powerpc/powerpc64/power8/fpu/Implies: Likewise.
	* sysdeps/powerpc/powerpc64/power6x/fpu/multiarch/Implies: Adjust
	correct imply path.
	* sysdeps/powerpc/powerpc64/power7/strncat.S (STRLEN): Define correct
	strlen symbol for non multi-arch builds.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_isnan.S (__isnan): Add
	missing hidden_def and weak_alias.

2014-05-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power4/memset.S (memset): Replace insrdi
	by insrwi.
	* sysdeps/powerpc/powerpc32/power6/memset.S (memset): Likewise.
	* sysdeps/powerpc/powerpc32/power7/memset.S (memset): Likewise.
	* sysdeps/powerpc/powerpc32/power7/memchr.S (memchr): Likewise.
	* sysdeps/powerpc/powerpc32/power7/memrchr.S (memrchr): Likewise.
	* sysdeps/powerpc/powerpc32/power7/rawmemchr.S (rawmemchr): Likewise.
	* sysdeps/powerpc/powerpc32/power7/strchr.S (strchr): Likewise.
	* sysdeps/powerpc/powerpc32/power7/strchrnul.S (strchrnul): Likewise.

2014-05-22  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power4/multiarch/memchr.c (memchr): Remove
	libc_hidden_builtin_def to ifunc.
	* sysdeps/powerpc/powerpc32/power4/multiarch/memchr-ppc32.c
	[libc_hidden_builtin_def]: Define hidden definition to __memchr_ppc32.

2014-05-19  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/fpu/multiarch/e_hypof.c: Moved ...
	* sysdeps/powerpc/powerpc64/fpu/multiarch/e_hypotf.c: ... here.

2014-05-06  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>
